--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prompt-sync": "^4.2.0",
+    "readline": "^1.3.0",
     "typescript": "^5.3.3"
   }
 }
